--- a/vignettes/fitting.Rmd
+++ b/vignettes/fitting.Rmd
@@ -108,11 +108,11 @@ sir <- odin2::odin({
 
   # Comparison to data
   cases <- data()
-  compare(cases) ~ Poisson(incidence)
+  cases ~ Poisson(incidence)
 }, quiet = TRUE)
 ```
 
-These last two lines are the new addition to the odin code.  The first says that `cases` will be found in the data.  The second restates our aim from the previous paragraph, comparing the observed `cases` against modelled `incidence`.  The syntax here is designed to echo that of the [`monty` DSL](https://mrc-ide.github.io/monty/articles/dsl.html), though (at least for now) we use `compare()` on the left side to make this clearer.
+These last two lines are the new addition to the odin code.  The first says that `cases` will be found in the data.  The second restates our aim from the previous paragraph, comparing the observed `cases` against modelled `incidence`.  The syntax here is designed to echo that of the [`monty` DSL](https://mrc-ide.github.io/monty/articles/dsl.html).
 
 With this version of the model we can compute likelihoods with `dust2`'s machinery.
 
@@ -378,7 +378,7 @@ sir <- odin2::odin({
 
   # Comparison to data
   cases <- data()
-  compare(cases) ~ Poisson(incidence)
+  cases ~ Poisson(incidence)
 }, quiet = TRUE)
 ```
 
