--- a/vignettes/errors.Rmd
+++ b/vignettes/errors.Rmd
@@ -89,13 +89,24 @@ initial(x = a) <- 1
 
 Invalid target on lhs of assignment.
 
-Example:
+Examples:
 
 ```
 1 <- 10
 ```
 
 The code above is valid R (as in, it can be parsed) but it is nonsensical.  At present the lhs of an assignment must be a symbol (e.g., `a <- 1`).  In future versions we will support assignments into arrays (e.g., `a[] <- 1`) but this is not yet implemented.
+
+This code is also reported if you have a spelling mistake, such as
+
+```
+inital() <- 1
+```
+instead of `initial()`. It is also reported with this code, which contains two legacy errors.
+```
+compare(d) <- Normal(0, 1)
+```
+Firstly, there is an error you may have made in the previous version, in which the assignment `<-` should be the comparison symbol `~`. Furthermore, in this version, the `compare()` function is not required at all, and you should write `d ~ Normal(0, 1)`.
 
 # `E1006`
 
